changed schema(now email is mutable), added swagger docs
